--- a/frontend/Kasa/src/components/collapseList/collapseList.css
+++ b/frontend/Kasa/src/components/collapseList/collapseList.css
@@ -7,3 +7,10 @@
     margin-left: 0;
     margin-right: 0;
 }
+
+@media (max-width: 768px) {
+    .collapses-container {
+        width: auto;
+        margin: 0 16px;
+    }
+}
